bynkc/tests/fixtures/positive/303_cross_context_collection_param/src/commerce/orders.bynk
context commerce.orders

consumes commerce.payment

service placeOrder {
  on call(totals: List[Int]) -> Effect[Result[Int, Int]] {
    let _ <- commerce.payment.batch(totals)
    Ok(1)
  }
}
