bynkc/tests/fixtures/negative/308_http_limits_not_http/src/jobs.bynk
context jobs

service jobs from cron {
  limits {
    maxBody: 100,
  }

  on schedule("0 0 * * *") () -> Effect[Result[(), String]] {
    Effect.pure(Ok(()))
  }
}
